[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerObject.gd" type="Script" id=1]

[node name="PlayerObject" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="box" type="Polygon2D" parent="." index="0"]

position = Vector2( 1.78021, 4.74913 )
scale = Vector2( 1.59524, 1.54907 )
polygon = PoolVector2Array( 141.525, -3.00647, 141.513, 63.7993, -1.01695, 63.7993, -0.918282, -2.9627 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="lbl_actions" type="Label" parent="box" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Actions"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="actions" type="Label" parent="box" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_cards" type="Label" parent="box" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 15.0
margin_right = 41.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Cards"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_gold" type="Label" parent="box" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 41.0
margin_right = 40.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Gold"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_faeria" type="Label" parent="box" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 28.0
margin_right = 41.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Faeria"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cards" type="Label" parent="box" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 15.0
margin_right = 94.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gold" type="Label" parent="box" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 41.0
margin_right = 94.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="faeria" type="Label" parent="box" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 28.0
margin_right = 94.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


